syntax = "proto3";

option java_multiple_files = true;
option java_package = "vk.itmo.teamgray.sharded.storage.common";

package vk.itmo.teamgray.sharded.storage;

message Empty {
  // No-op.
}

message StatusResponse {
  bool success = 1;
  string message = 2;
}
